--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,28 @@ services:
       - .:/usr/app/
       - /usr/app/node_modules
     ports:
-      - "3003:3003"
+      - 3003:3003
+      - 9229:9229
     depends_on:
-      - postgres
+      - db
+    links:
+      - db
     environment:
         NODE_ENV: ${NODE_ENV}
         DISCORD_TOKEN: ${DISCORD_TOKEN}
         BOT_OWNER: ${BOT_OWNER}
         BOT_PREFIX: ${BOT_PREFIX}
-        DB_CLIENT: ${DB_CLIENT}
+        DB_DRIVER: ${DB_DRIVER}
+        DB_HOST: ${DB_HOST}
+        DB_PORT: ${DB_PORT}
         DB_USER: ${DB_USER}
-        DB_DB: ${DB_NAME}
         DB_PASSWORD: ${DB_PASSWORD}
-  postgres:
+  db:
     container_name: db
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
     image: postgres:11.5
     environment:
       POSTGRES_USER: ${DB_USER}
