--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "ts-bot",
-  "version": "1.0.0",
-  "description": "A discord.js bot made with Typescript",
-  "dependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/node": "^12.7.3",
-    "@types/ws": "^6.0.1",
-    "discord.js": "discordjs/discord.js#master",
-    "discord.js-commando": "discordjs/Commando#master",
-    "dotenv": "^8.0.0",
-    "mikro-orm": "^2.7.6",
-    "module-alias": "^2.2.0",
-    "pg": "^7.12.1",
-    "typescript": "^3.5.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.1",
-    "ts-loader": "^6.0.2"
-  },
-  "_moduleAliases": {
-    "@": "dist"
-  },
-  "scripts": {
-    "compile": "tsc && node --inspect dist/index.js",
-    "dev": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run compile\""
-  },
-  "keywords": [],
-  "author": "Neil Richter <me@neilrichter.com> (https://neilrichter.com/)",
-  "license": "ISC"
+   "name": "ts-bot",
+   "version": "1.0.0",
+   "description": "A discord.js bot made with Typescript",
+   "dependencies": {
+      "@types/dotenv": "^6.1.1",
+      "@types/node": "^12.7.3",
+      "@types/ws": "^6.0.1",
+      "discord.js": "discordjs/discord.js#master",
+      "discord.js-commando": "discordjs/Commando#master",
+      "dotenv": "^8.0.0",
+      "module-alias": "^2.2.0",
+      "pg": "^7.12.1",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.18",
+      "typescript": "^3.5.2",
+      "mysql": "^2.14.1"
+   },
+   "devDependencies": {
+      "nodemon": "^1.19.1",
+      "ts-loader": "^6.0.2",
+      "ts-node": "3.3.0"
+   },
+   "_moduleAliases": {
+      "@": "dist"
+   },
+   "scripts": {
+      "compile": "tsc && node --inspect=0.0.0.0 dist/index.js",
+      "dev": "nodemon -e ts --exec \"clear; npm run compile\"",
+      "start": "ts-node src/index.ts"
+   },
+   "keywords": [],
+   "author": "Neil Richter <me@neilrichter.com> (https://neilrichter.com/)",
+   "license": "ISC"
 }
