--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,29 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "types": ["node"],
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es6",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["*"],
-      "types/*": ["types/*"]
-    }
-  },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "migrations",
-    "seeds"
-  ]
+   "compilerOptions": {
+      "baseUrl": "./src",
+      "emitDecoratorMetadata": true,
+      "esModuleInterop": true,
+      "experimentalDecorators": true,
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "outDir": "./dist",
+      "paths": {
+         "@/*": [
+            "*"
+         ],
+         "types/*": [
+            "types/*"
+         ]
+      },
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "target": "es6",
+      "types": [
+         "node"
+      ]
+   }
 }
