--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
    },
    "scripts": {
       "compile": "tsc && node --inspect=0.0.0.0 dist/index.js",
-      "dev": "nodemon -e ts --exec \"clear; npm run compile\"",
+      "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+      "bin": "ts-node dist/bin",
+      "dev": "nodemon -e ts --exec \"npm run compile\"",
       "start": "ts-node src/index.ts"
    },
    "keywords": [],
