--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
             "types/*"
          ]
       },
+      "resolveJsonModule": true,
       "skipLibCheck": true,
       "sourceMap": true,
       "target": "es6",
