--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     restart: always
     container_name: bot
+    tty: true
     command: npm run dev
     volumes:
       - .:/usr/app/
