--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
       "@types/dotenv": "^6.1.1",
       "@types/node": "^12.7.3",
       "@types/ws": "^6.0.1",
+      "dblapi.js": "^2.3.0",
       "discord.js": "discordjs/discord.js#master",
       "discord.js-commando": "discordjs/Commando#master",
       "dotenv": "^8.0.0",
       "module-alias": "^2.2.0",
+      "mysql": "^2.14.1",
       "pg": "^7.12.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.18",
-      "typescript": "^3.5.2",
-      "mysql": "^2.14.1"
+      "typescript": "^3.5.2"
    },
    "devDependencies": {
       "nodemon": "^1.19.1",
