--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,1 @@
-NODE_ENV=
-DISCORD_TOKEN=
-BOT_OWNER=
-BOT_PREFIX=
-DB_DRIVER=
-DB_HOST=db
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DISCORDBOTS_TOKEN=
+NODE_ENV=development
