--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
       "@types/node": "^12.7.3",
       "@types/ws": "^6.0.1",
       "dblapi.js": "^2.3.0",
-      "discord.js": "discordjs/discord.js#master",
-      "discord.js-commando": "discordjs/Commando#master",
+      "discord.js": "^12.1.1",
+      "discord.js-commando": "github:discordjs/Commando",
       "dotenv": "^8.0.0",
       "module-alias": "^2.2.0",
       "mysql": "^2.14.1",
